--- a/todo/todo/index.html
+++ b/todo/todo/index.html
@@ -5,11 +5,12 @@
     <link rel=stylesheet href="bootstrap.css">
     <link rel=stylesheet href="TODO.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
-<style>[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak] {
+    <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase.js"></script>
+    <style>[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak] {
         display: none !important;
     }</style>
+</head>
+<body>
 <div class="container" data-ng-app="todo">
     <div class="ng-view"></div>
 </div>
