--- a/todo/todo/index.html
+++ b/todo/todo/index.html
@@ -4,6 +4,7 @@
     <title>//TODO</title>
     <link rel=stylesheet href="bootstrap.css">
     <link rel=stylesheet href="TODO.css">
+    <link rel="shortcut icon" type="image/x-icon" href="../../feelsgoodman1.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase.js"></script>
     <style>[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak] {
