--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </div>
 </div>
 <a id="hiddenLink" style="display: none" target="_blank"></a>
-<div style="position: absolute; bottom: 0; right: 0;" id="chromeWarning">This page was made for Chrome is probably not
+<div style="position: fixed; bottom: 0; right: 0;" id="chromeWarning">This page was made for Chrome is probably not
     working properly in your browser
 </div>
 <script>
@@ -116,7 +116,7 @@
     }
     let srcMap = {
             cd: 'cd/cd.html',
-            todo: 'todo/todo/index.html',
+            todo: 'todo/index.html',
             about: 'about.html'
         },
         hiddenLink = document.getElementById('hiddenLink'),
