--- a/todo/index.html
+++ b/todo/index.html
@@ -2,12 +2,24 @@
 <html>
 <head>
     <title>//TODO</title>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel=stylesheet href="main.css">
     <link rel="shortcut icon" type="image/x-icon" href="../feelsgoodman1.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
+
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.2/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.2/angular-route.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.2/angular-animate.js"></script>
@@ -18,8 +30,33 @@
     }</style>
 </head>
 <body>
-<div class="container" data-ng-app="todo">
-    <div class="ng-view"></div>
+<div data-ng-app="todo">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" ng-controller="routeController">
+        <span class="navbar-brand" style="pointer-events: none">SirKeztrel</span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li ng-repeat="navItem in nav" class="nav-item">
+                    <a class="nav-link" href="{{navItem.href}}">{{navItem.name}}</a>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0" ng-show="!u" ng-submit="login()">
+                <input class="form-control mr-sm-2" ng-model="usernameInput" type="text" placeholder="Username"
+                       aria-label="Username">
+                <input class="form-control mr-sm-2" ng-model="passwordInput" type="password" placeholder="Password"
+                       aria-label="Password">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+            </form>
+            <button class="btn btn-default my-2 my-sm-0" ng-show="u" ng-click="logout()">Logout</button>
+        </div>
+    </nav>
+    <div class="container">
+        <div class="ng-view"></div>
+    </div>
 </div>
 <script src="app.js"></script>
 </body>
