--- a/todo/index.html
+++ b/todo/index.html
@@ -6,16 +6,10 @@
     <link rel="shortcut icon" type="image/x-icon" href="../feelsgoodman1.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-            crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
 
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase.js"></script>
@@ -31,7 +25,42 @@
 </head>
 <body>
 <div data-ng-app="todo">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" ng-controller="routeController">
+    <nav class="navbar navbar-default navbar-static-top" ng-controller="routeController">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                        aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Project name</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li ng-repeat="item in nav"><a href="{{item.href}}">{{item.name}}</a></li>
+                </ul>
+                <form class="navbar-form navbar-right" ng-show="!u" ng-submit="login()">
+                    <div class="form-group">
+                        <input class="form-control" ng-model="usernameInput" type="text"
+                               placeholder="Username"
+                               aria-label="Username">
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" ng-model="passwordInput" type="password"
+                               placeholder="Password"
+                               aria-label="Password">
+                    </div>
+                    <button type="submit" class="btn btn-success">Sign in</button>
+                </form>
+                <form class="navbar-form navbar-right" ng-show="u">
+                    <button class="btn btn-default" ng-click="logout()">Logout</button>
+                </form>
+            </div><!--/.nav-collapse -->
+        </div>
+    </nav>
+    <!--<div class="navbar-collapse collapse" ng-controller="routeController">
         <span class="navbar-brand" style="pointer-events: none">SirKeztrel</span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,7 +82,7 @@
             </form>
             <button class="btn btn-default my-2 my-sm-0" ng-show="u" ng-click="logout()">Logout</button>
         </div>
-    </nav>
+    </div>-->
     <div class="container">
         <div class="ng-view"></div>
     </div>
