--- a/todo/index.html
+++ b/todo/index.html
@@ -35,7 +35,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Project name</a>
+                <a class="navbar-brand" href="#" style="pointer-events: none">SirKeztrel</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -60,29 +60,6 @@
             </div><!--/.nav-collapse -->
         </div>
     </nav>
-    <!--<div class="navbar-collapse collapse" ng-controller="routeController">
-        <span class="navbar-brand" style="pointer-events: none">SirKeztrel</span>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li ng-repeat="navItem in nav" class="nav-item">
-                    <a class="nav-link" href="{{navItem.href}}">{{navItem.name}}</a>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0" ng-show="!u" ng-submit="login()">
-                <input class="form-control mr-sm-2" ng-model="usernameInput" type="text" placeholder="Username"
-                       aria-label="Username">
-                <input class="form-control mr-sm-2" ng-model="passwordInput" type="password" placeholder="Password"
-                       aria-label="Password">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
-            </form>
-            <button class="btn btn-default my-2 my-sm-0" ng-show="u" ng-click="logout()">Logout</button>
-        </div>
-    </div>-->
     <div class="container">
         <div class="ng-view"></div>
     </div>
