adjust copy pasted code

--- a/todo/listView.html
+++ b/todo/listView.html
@@ -5,8 +5,8 @@
                 <div ng-show="!u" class="loginWindow">
                     <p>Please sign in or register!</p>
                     <form ng-submit="signUp()">Register
-                        <input ng-model="newUsernameInput" title="newUsernameInput" class="form-control">
-                        <input ng-model="newPasswordInput" title="newPasswordInput" type="password"
+                        <input ng-model="newUsernameInput" title="newUsernameInput" class="form-control" placeholder="E-Mail">
+                        <input ng-model="newPasswordInput" title="newPasswordInput" type="password" placeholder="Password"
                                class="form-control">
                         <input type="submit" class="btn btn-default addButton">
                     </form>
