--- a/todo/index.html
+++ b/todo/index.html
@@ -44,8 +44,8 @@
                 <form class="navbar-form navbar-right" ng-show="!u" ng-submit="login()">
                     <div class="form-group">
                         <input class="form-control" ng-model="usernameInput" type="text"
-                               placeholder="Username"
-                               aria-label="Username">
+                               placeholder="E-Mail"
+                               aria-label="E-Mail">
                     </div>
                     <div class="form-group">
                         <input class="form-control" ng-model="passwordInput" type="password"
