--- a/todo/index.html
+++ b/todo/index.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="../feelsgoodman1.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
@@ -57,7 +58,7 @@
                 <form class="navbar-form navbar-right" ng-show="u">
                     <button class="btn btn-default" ng-click="logout()">Logout</button>
                 </form>
-            </div><!--/.nav-collapse -->
+            </div>
         </div>
     </nav>
     <div class="container">
