better container classes

--- a/todo/listView.html
+++ b/todo/listView.html
@@ -1,4 +1,4 @@
-<div data-ng-app="todo" ng-cloak class="container">
+<div ng-cloak class="container">
     <div class="col-md-12">
         <div class="todoContainer">
             <div ng-controller="Controller">
