--- a/todo/about.html
+++ b/todo/about.html
@@ -1,29 +1,31 @@
 <div class="container">
-    <h1>
-        About
-    </h1>
-    <p>Lorem Ispum is a choke artist. It chokes! I will write some great placeholder text – and
-        nobody writes
-        better placeholder text than me, believe me – and I’ll write it very inexpensively. I will write some
-        great, great text on your website’s Southern border, and I will make Google pay for that text. Mark my
-        words.
-    </p>
-    <p>I think the only card she has is the Lorem card. My text is long and beautiful, as, it has been well
-        documented, are various other parts of my website.
-    </p>
-    <p>I was going to say something extremely rough to Lorem Ipsum, to its family, and I said to myself, "I
-        can't do it. I just can't do it. It's inappropriate. It's not nice." Trump Ipsum is calling for a total
-        and complete shutdown of Muslim text entering your website. I think the only difference between me and
-        the other placeholder text is that I’m more honest and my words are more beautiful.
-    </p>
-    <p>We have so many things that we have to do better... and certainly ipsum is one of them.
-    </p>
-    <p>When other websites give you text, they’re not sending the best. They’re not sending you, they’re
-        sending words that have lots of problems and they’re bringing those problems with us. They’re bringing
-        mistakes. They’re bringing misspellings. They’re typists… And some, I assume, are good words. An
-        'extremely credible source' has called my office and told me that Lorem Ipsum's birth certificate is a
-        fraud. The concept of Lorem Ipsum was created by and for the Chinese in order to make U.S. design jobs
-        non-competitive. My text is long and beautiful, as, it has been well documented, are various other parts
-        of my website. I know words. I have the best words.
-    </p>
+    <div class="col-md-12">
+        <h1>
+            About
+        </h1>
+        <p>Lorem Ispum is a choke artist. It chokes! I will write some great placeholder text – and
+            nobody writes
+            better placeholder text than me, believe me – and I’ll write it very inexpensively. I will write some
+            great, great text on your website’s Southern border, and I will make Google pay for that text. Mark my
+            words.
+        </p>
+        <p>I think the only card she has is the Lorem card. My text is long and beautiful, as, it has been well
+            documented, are various other parts of my website.
+        </p>
+        <p>I was going to say something extremely rough to Lorem Ipsum, to its family, and I said to myself, "I
+            can't do it. I just can't do it. It's inappropriate. It's not nice." Trump Ipsum is calling for a total
+            and complete shutdown of Muslim text entering your website. I think the only difference between me and
+            the other placeholder text is that I’m more honest and my words are more beautiful.
+        </p>
+        <p>We have so many things that we have to do better... and certainly ipsum is one of them.
+        </p>
+        <p>When other websites give you text, they’re not sending the best. They’re not sending you, they’re
+            sending words that have lots of problems and they’re bringing those problems with us. They’re bringing
+            mistakes. They’re bringing misspellings. They’re typists… And some, I assume, are good words. An
+            'extremely credible source' has called my office and told me that Lorem Ipsum's birth certificate is a
+            fraud. The concept of Lorem Ipsum was created by and for the Chinese in order to make U.S. design jobs
+            non-competitive. My text is long and beautiful, as, it has been well documented, are various other parts
+            of my website. I know words. I have the best words.
+        </p>
+    </div>
 </div>
