no index lel html

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     }
     let srcMap = {
             cd: 'cd/cd.html',
-            todo: 'todo/index.html',
+            todo: 'todo/',
             about: 'about.html'
         },
         hiddenLink = document.getElementById('hiddenLink'),
