--- a/pewpewdies/index.html
+++ b/pewpewdies/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Bihsc Lasagna</title>
+    <link rel="icon" type="image/png" href="https://orig00.deviantart.net/c0bc/f/2018/031/f/b/tears_of_joy_emoji_by_myrellibelli-dc1qdit.png"/>
     <style>
         body {
             font-size: 30pt;
