--- a/pewpewdies/index.html
+++ b/pewpewdies/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Bihsc Lasagna</title>
-    <link rel="icon" type="image/png" href="https://orig00.deviantart.net/c0bc/f/2018/031/f/b/tears_of_joy_emoji_by_myrellibelli-dc1qdit.png"/>
     <style>
         body {
             font-size: 30pt;
@@ -108,8 +107,8 @@
         let xhttp = new XMLHttpRequest();
         xhttp.onreadystatechange = function () {
             if (this.readyState === 4 && this.status === 200) {
-                index = +this.responseText;
-                document.getElementById('pewpewdies').innerHTML = Intl.NumberFormat().format(index);
+                pewpewdies = +this.responseText;
+                document.getElementById('pewpewdies').innerHTML = Intl.NumberFormat().format(pewpewdies);
                 updateOutput();
             }
         };
@@ -130,8 +129,8 @@
     }
 
     function updateOutput() {
-        if (index > 0 && tesla > 0) {
-            diff = index - tesla;
+        if (pewpewdies > 0 && tesla > 0) {
+            diff = pewpewdies - tesla;
             document.getElementById('diff').innerHTML = Intl.NumberFormat().format(diff);
             document.getElementById('diffDiff').innerHTML = Intl.NumberFormat().format(diff - oDiff) + ' in ' + timeDiff();
         }
