--- a/pewpewdies/index.html
+++ b/pewpewdies/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Bihsc Lasagna</title>
+    <link rel="icon" type="image/png" href="Untitled-11.png"/>
     <style>
         body {
             font-size: 30pt;
