--- a/pewpewdies/index.html
+++ b/pewpewdies/index.html
@@ -56,7 +56,10 @@
     </tbody>
 </table>
 <div id="about" style="position: fixed; bottom: 0; right: 0; padding: 5px; font-size: 10pt; text-align: right">
-    <button onclick="hideAbout()">hide this</button>
+    <button onclick="hideAbout()">hide this</button><br>
+    Numbers supplied by <a href="https://socialblade.com/">socialblade.com</a>.<br>
+    <a href="https://socialblade.com/youtube/c/pewdiepie">https://socialblade.com/youtube/c/pewdiepie</a><br>
+    <a href="https://socialblade.com/youtube/c/tseriesmusic">https://socialblade.com/youtube/c/tseriesmusic</a><br>
     I don't profit off of this, so, please don't sue me, Tesla.<br>
     This code was made by me, although some parts are copy pasted from stackoverflow, mainly the formatting bits.
 </div>
