--- a/pewpewdies/index.html
+++ b/pewpewdies/index.html
@@ -56,7 +56,7 @@
     </tbody>
 </table>
 <div id="about" style="position: fixed; bottom: 0; right: 0; padding: 5px; font-size: 10pt; text-align: right">
-    <button onclick="hideAbout()">hide this</button><br>
+    <button onclick="hideAbout()">hide this info</button><br>
     Numbers supplied by <a href="https://socialblade.com/">socialblade.com</a>.<br>
     <a href="https://socialblade.com/youtube/c/pewdiepie">https://socialblade.com/youtube/c/pewdiepie</a><br>
     <a href="https://socialblade.com/youtube/c/tseriesmusic">https://socialblade.com/youtube/c/tseriesmusic</a><br>
